--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "debug": "cucumber-js --tags  @"
+    "debug": "cucumber-js --tags  @DemoTest"
   },
   "keywords": [],
   "author": "Gino Fernald",
